select all/unselect all links in import dialog are no longer too close to scroll bar

--- a/public/stylesheets/extra.css
+++ b/public/stylesheets/extra.css
@@ -746,6 +746,7 @@ p.takings-changed {
 .links {
 	font-size: 1.2em;
 	color: blue;
+	padding-bottom: 10px;
 }
 .links a{
 	color: blue;
